do316/materials/labs/network-services/solutions/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: network-services
spec:
  type: ClusterIP
  selector:
    app: mariadb-server
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
