do316/materials/labs/network-services/solutions/policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-db-clients
  namespace: network-services
spec:
  podSelector:
    matchLabels:
      app: mariadb-server

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          allowing: db-clients
    ports:
    - port: 3306
      protocol: TCP
